Fix game integrations and statistics