@@ -4,6 +4,7 @@ import com.gamestats.platform.integration.lol.dto.RiotAccountResponse;
 import com.gamestats.platform.integration.tft.dto.TftMatchResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.stereotype.Component;
 import org.springframework.web.reactive.function.client.WebClient;
 
@@ -33,7 +34,14 @@ public class TftApiClient {
             String tagLine
     ) {
 
-        return webClient.get()
+        System.out.println("========================================");
+        System.out.println("TFT ACCOUNT REQUEST");
+        System.out.println("Game Name: " + gameName);
+        System.out.println("Tag Line: " + tagLine);
+        System.out.println("Region Host: " + regionHost);
+        System.out.println("========================================");
+
+        RiotAccountResponse response = webClient.get()
                 .uri(uriBuilder ->
                         uriBuilder
                                 .scheme("https")
@@ -51,10 +59,39 @@ public class TftApiClient {
                         apiKey
                 )
                 .retrieve()
+                .onStatus(
+                        HttpStatusCode::isError,
+                        clientResponse ->
+                                clientResponse
+                                        .bodyToMono(String.class)
+                                        .map(body ->
+                                                new RuntimeException(
+                                                        "Riot Account API error: "
+                                                                + clientResponse.statusCode()
+                                                                + " - "
+                                                                + body
+                                                )
+                                        )
+                )
                 .bodyToMono(
                         RiotAccountResponse.class
                 )
                 .block();
+
+        if (response == null) {
+            System.out.println("TFT ACCOUNT RESPONSE: NULL");
+        } else {
+            System.out.println("TFT ACCOUNT PUUID: "
+                    + response.getPuuid());
+
+            System.out.println("TFT ACCOUNT GAME NAME: "
+                    + response.getGameName());
+
+            System.out.println("TFT ACCOUNT TAG LINE: "
+                    + response.getTagLine());
+        }
+
+        return response;
     }
 
 
@@ -67,6 +104,13 @@ public class TftApiClient {
             String puuid,
             int count
     ) {
+
+        System.out.println("========================================");
+        System.out.println("TFT MATCH IDS REQUEST");
+        System.out.println("PUUID: " + puuid);
+        System.out.println("Count: " + count);
+        System.out.println("Region Host: " + regionHost);
+        System.out.println("========================================");
 
         String[] response = webClient.get()
                 .uri(uriBuilder ->
@@ -85,14 +129,48 @@ public class TftApiClient {
                         apiKey
                 )
                 .retrieve()
+                .onStatus(
+                        HttpStatusCode::isError,
+                        clientResponse ->
+                                clientResponse
+                                        .bodyToMono(String.class)
+                                        .map(body ->
+                                                new RuntimeException(
+                                                        "Riot TFT Match IDs API error: "
+                                                                + clientResponse.statusCode()
+                                                                + " - "
+                                                                + body
+                                                )
+                                        )
+                )
                 .bodyToMono(
                         String[].class
                 )
                 .block();
 
-        return response == null
-                ? List.of()
-                : Arrays.asList(response);
+        if (response == null) {
+
+            System.out.println(
+                    "TFT MATCH IDS RESPONSE: NULL"
+            );
+
+            return List.of();
+        }
+
+        System.out.println(
+                "TFT MATCH IDS FOUND: "
+                        + response.length
+        );
+
+        if (response.length > 0) {
+
+            System.out.println(
+                    "TFT FIRST MATCH ID: "
+                            + response[0]
+            );
+        }
+
+        return Arrays.asList(response);
     }
 
 
@@ -101,18 +179,76 @@ public class TftApiClient {
     // Match ID -> Match details
     // =========================================================
 
-    public TftMatchResponse getMatch(String matchId) {
+    public TftMatchResponse getMatch(
+            String matchId
+    ) {
 
-        return webClient.get()
+        System.out.println(
+                "TFT MATCH REQUEST: "
+                        + matchId
+        );
+
+        TftMatchResponse response = webClient.get()
                 .uri(
-                        "https://" +
-                                regionHost +
-                                "/tft/match/v1/matches/{matchId}",
+                        "https://"
+                                + regionHost
+                                + "/tft/match/v1/matches/{matchId}",
                         matchId
                 )
-                .header("X-Riot-Token", apiKey)
+                .header(
+                        "X-Riot-Token",
+                        apiKey
+                )
                 .retrieve()
-                .bodyToMono(TftMatchResponse.class)
+                .onStatus(
+                        HttpStatusCode::isError,
+                        clientResponse ->
+                                clientResponse
+                                        .bodyToMono(String.class)
+                                        .map(body ->
+                                                new RuntimeException(
+                                                        "Riot TFT Match API error: "
+                                                                + clientResponse.statusCode()
+                                                                + " - "
+                                                                + body
+                                                )
+                                        )
+                )
+                .bodyToMono(
+                        TftMatchResponse.class
+                )
                 .block();
+
+        if (response == null) {
+
+            System.out.println(
+                    "TFT MATCH RESPONSE: NULL"
+            );
+
+        } else if (response.getInfo() == null) {
+
+            System.out.println(
+                    "TFT MATCH INFO: NULL"
+            );
+
+        } else if (response.getInfo().getParticipants() == null) {
+
+            System.out.println(
+                    "TFT PARTICIPANTS: NULL"
+            );
+
+        } else {
+
+            System.out.println(
+                    "TFT PARTICIPANTS FOUND: "
+                            + response
+                            .getInfo()
+                            .getParticipants()
+                            .size()
+            );
+        }
+
+        return response;
     }
 }
+
